versioned_docs/version-1.2/danksearch/installation.mdx
---
title: Installation
description: Install DankSearch application launcher
sidebar_position: 2
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗ ███████╗███████╗ █████╗ ██████╗  ██████╗██╗  ██╗
██╔══██╗██╔════╝██╔════╝██╔══██╗██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗█████╗  ███████║██████╔╝██║     ███████║
██║  ██║╚════██║██╔══╝  ██╔══██║██╔══██╗██║     ██╔══██║
██████╔╝███████║███████╗██║  ██║██║  ██║╚██████╗██║  ██║
╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝
                                                        `}
/>

# DankSearch Installation

`dsearch` has zero dependencies and compiles to a single static binary.

:::tip[NixOS Users]
If you're using NixOS, see the dedicated [NixOS Installation guides](nixos-flake) for declarative installation with flakes or native nixpkgs modules.
:::

## Installation Methods

Choose the installation method that best fits your system:

### NixOS

For NixOS users, we recommend using the declarative installation methods:

- **[Flake Installation (home-manager)](nixos-flake)** - Recommended for most users, provides per-user installation with home-manager
- **[NixOS Module](nixos)** - System-wide installation using native nixpkgs (when available)

### Distribution Packages

#### Arch Linux (AUR)
```bash
paru -S dsearch-bin

# Development version
paru -S dsearch-git
```

#### Fedora
```bash
sudo dnf copr enable avengemedia/danklinux
sudo dnf install dsearch
```

Distribution packages include the systemd user service. Enable it for automatic index updates:

```bash
systemctl --user enable --now dsearch
```

### Pre-built Binaries

Download the latest release for your architecture:

```bash
# Download and install
wget https://github.com/AvengeMedia/danksearch/releases/latest/download/dsearch-linux-amd64.gz
gunzip dsearch-linux-amd64.gz
chmod +x dsearch-linux-amd64
sudo mv dsearch-linux-amd64 /usr/local/bin/dsearch
```

Install and enable the systemd user service for automatic index updates:

```bash
mkdir -p ~/.config/systemd/user
wget https://raw.githubusercontent.com/AvengeMedia/danksearch/refs/heads/master/assets/dsearch.service -O ~/.config/systemd/user/dsearch.service
systemctl --user enable --now dsearch
```

The service runs the API server with file watching, automatically updating the index when files change.

### From Source

Requirements: Go 1.24+

```bash
git clone https://github.com/AvengeMedia/danksearch
cd danksearch
make
sudo make install
make install-service
systemctl --user enable --now dsearch
```

## Verification

Test the installation:

```bash
# Check version
dsearch version

# Build initial index
dsearch index generate
```

## System Requirements

- **Operating System**: Unix-based, compatible with most Unix-based operating systems (Linux, MacOS, BSD)
- **Go Version**: 1.24+ (for building from source)

## Integration with DMS

:::tip

DankMaterialShell users can initiate filesystem search by typing `/` in the launcher when dsearch is installed.

:::

## Next Steps

- [Configuration](configuration) - Configure dsearch
- [Usage](usage) - Learn CLI commands and API usage
